# Mobile-Robot-LAB-1

./: README.md  ekf_v2.py  fake_gps_node.py  frames_2025-02-20_12.47.02.gv
limo_bringup/: CMakeLists.txt
limo_bringup/launch/: limo_bringup.launch.py
limo_bringup/scripts/: Plan.py  ackermann_steering_node.py  bicycle_model_node.py  ekf.py  odometry_calculation.py  steering_model_node.py  yaw_rate_odometry.py
limo_controller/: CMakeLists.txt
limo_controller/config/: cross_track_pure.yaml  cross_track_stan.yaml  p.yaml  pd.yaml  pid.yaml  pid_all.yaml
limo_controller/scripts/: all_plotter.py  controller_server.py  cross_track_logger.py  mpc.py  odometry_calculation.py  odometry_plotter.py  path_publisher.py  steering_model_node.py  xyz_plotter.py  xyz_plotter_separate.py
limo_description/: CMakeLists.txt
limo_description/config/: gazebo_controllers.yaml
limo_description/launch/: limo.launch.py
limo_description/urdf/: gazebo.xacro  gazebo2.xacro  gazebo_control.xacro  imu.xacro  limo.xacro  limo_ackerman.xacro  limo_four_diff.xacro  limo_gazebo.gazebo  limo_imu.xacro  limo_meshes.xacro  limo_no_meshes.xacro  limo_steering_hinge.xacro  limo_xacro.xacro  robot.xacro  robot2.xacro
limo_gazebo/: CMakeLists.txt  package.xml
limo_gazebo/launch/: circuit_bringup.launch.py  load_world_into_gazebo.launch.py  sim.launch.py
limo_gps_interfaces/: CMakeLists.txt  package.xml
limo_gps_interfaces/srv/: SetNoiseParams.srv
limo_localization/: CMakeLists.txt  package.xml
rrbot_description/: CMakeLists.txt  package.xml
rrbot_gazebo/: CMakeLists.txt  package.xml
(+31 files in other folders)
